# castella

./: Cargo.toml  README.md  example.clla
src/: lexer.rs  main.rs  parser.rs
src/semantic_analyzer/: mod.rs  resolver.rs  type_checker.rs
tamago/: Cargo.toml  README.md
tamago/src/: block.rs  comment.rs  conditional.rs  enums.rs  expr.rs  formatter.rs  function.rs  lib.rs  loops.rs  preprocessor.rs  scope.rs  structs.rs  typedef.rs  types.rs  union.rs  variable.rs
tamago/tamacro/: Cargo.toml
tamago/tamacro/src/: lib.rs
