[package]
name = "castella"
version = "0.0.0"
edition = "2024"

description = "Basically C programming language peppered with my preferences"
license-file = "LICENSE.txt"
categories = ["compilers"]
keywords = ["language", "programming language"]
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
repository = "https://github.com/bichanna/castella"
readme = "README.md"

[dependencies]
tamago = { path = "tamago", version = "0.1.1" }

[workspace]
members = [
  "tamago",
  "tamago/tamacro"
]
