[package]
name = "castella"
version = "0.0.0"
edition = "2024"

description = "Basically the C programming language peppered with my preferences"
license = "MIT"
license-file = "LICENSE.txt"
categories = ["compilers"]
keywords = ["language", "programming_language"]
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
repository = "https://github.com/bichanna/castella"
readme = "README.md"

[dependencies]
tamago = { path = "tamago" }
tamacro = { path = "tamago/tamacro" }
snailquote = "~0.3"
logos = "~0.15"
colored = "~3.0"

[workspace]
members = [
  "tamago",
  "tamago/tamacro"
]
